--- a/JobPortal/Features/Home/JobSearch.razor
+++ b/JobPortal/Features/Home/JobSearch.razor
@@ -2,7 +2,7 @@
 
 <div class="jumbotron">
     <h3 class="display-4 text-center">Welcome to JobPortal</h3>
-    <p class="lead text-center">Find the most jobs search!</p>
+    @*<p class="lead text-center">Find the most jobs search!</p>*@
     <p class="mt-4">
         <input @onkeydown="SearchForJobs"
         @bind="_searchTerm"
