[new addjobspage] in jobportal

--- a/JobPortal/_Imports.razor
+++ b/JobPortal/_Imports.razor
@@ -9,4 +9,5 @@
 @using JobPortal
 @using JobPortal.Features.Home
 @using JobPortal.Features.Layout
-
+@using Blazored.FluentValidation
+@using MediatR;
