--- a/JobPortal/Features/ManageJobs/AddJobsPage.razor
+++ b/JobPortal/Features/ManageJobs/AddJobsPage.razor
@@ -52,14 +52,27 @@ else if (_errorMessage is not null)
             <InputText @bind-Value="_job.Location" class="form-control" id="trailLocation" />
             <ValidationMessage For="@(() => _job.Location)" />
         </FormFieldSet>
+        <FormFieldSet Width="col-6">
+            <label for="trailImage" class="font-weight-bold text-secondary">Image</label>
+            @if (string.IsNullOrWhiteSpace(_job.Image))
+            {
+                <InputFile OnChange="LoadJobImage" class="form-control-file" id="trailImage" accept=".png,.jpg,.jpeg" />
+            }
+            else
+            {
+                <div class="card bg-dark text-white">
+                    <img src="images/@_job.Image" />
+                </div>
+            }
+        </FormFieldSet>
 
     </FormSection>
 
     <FormSection Title="Difficulty"
-    HelpText="Help other hikers out by telling them the length of the trail is how long it might take them.">
+    HelpText="Help other hikers out by telling them the salary of the job is how manay it might take them.">
 
     <FormFieldSet Width="col-3">
-    <label for="trailLength" class="font-weight-bold text-secondary">Length (km)</label>
+    <label for="trailLength" class="font-weight-bold text-secondary">Salary</label>
             <InputNumber @bind-Value="_job.Salary" class="form-control" id="jobsalary" />
             <ValidationMessage For="@(() => _job.Salary)" />
     </FormFieldSet>
@@ -124,20 +137,52 @@ else if (_errorMessage is not null)
     private bool _submitSuccessful;
     private string? _errorMessage;
 
+    private IBrowserFile? _jobImage;
 
     private async Task SubmitForm()
     {
         var response = await Mediator.Send(new AddJobRequest(_job));
         if (response.JobsId == -1)
         {
-            _errorMessage = "There was a problem saving your jobs.";
+            _errorMessage = "There was a problem saving your job.";
             _submitSuccessful = false;
             return;
         }
 
+        if (_jobImage is null)
+        {
+            _submitSuccessful = true;
+            ResetForm();
+            return;
+        }
+        await ProcessImage(response.JobsId);
+
         _job = new JobsDto();
         _errorMessage = null;
         _submitSuccessful = true;
+    }
 
+    private void ResetForm()
+    {
+        _job = new JobsDto();
+        _jobImage = null;
+    }
+
+    private async Task ProcessImage(int jobId)
+    {
+        var imageUploadResponse = await Mediator.Send(new UploadJobImageRequest(jobId, _jobImage));
+
+        if (string.IsNullOrWhiteSpace(imageUploadResponse.ImageName))
+        {
+            _errorMessage = "Your trail was saved, but there was a problem uploading the image.";
+            return;
+        }
+
+        _submitSuccessful = true;
+        ResetForm();
+    }
+    private void LoadJobImage(InputFileChangeEventArgs e)
+    {
+        _jobImage = e.File;
     }
 }
