--- a/JobPortal/Features/ManageJobs/_Imports.razor
+++ b/JobPortal/Features/ManageJobs/_Imports.razor
@@ -1,1 +1,5 @@
 ﻿@using JobPortal.Shared.Features.ManageJobs
+@using JobPortal.Shared.Features.ManageJobs.Shared
+@using JobPortal.Features.ManageJobs.Shared
+@using JobPortal.Shared.Features.ManageJobs.AddJob
+@using JobPortal.Shared.Features.ManageJobs.EditJob
