--- a/JobPortal/Features/Home/SearchPage.razor
+++ b/JobPortal/Features/Home/SearchPage.razor
@@ -1,7 +1,9 @@
 ﻿@page "/search/{SearchTerm}"
 @page "/search/{SearchTerm}/maxsalary/{MaxSalary:int}"
+@using JobPortal.Shared.Features.Home.Shared;
 @inject HttpClient Http
 @inject NavigationManager NavManager
+@inject IMediator Mediator
 
 <PageTitle>Search Jobs</PageTitle>
 
@@ -41,14 +43,25 @@ else
     {
         try
         {
-            var allJobs = await Http.GetFromJsonAsync<IEnumerable<Jobs>>("jobs/jobs_data.json");
+            //var allJobs = await Http.GetFromJsonAsync<IEnumerable<Jobs>>("jobs/jobs_data.json");
+            var response = await Mediator.Send(new GetJobsRequest());
+            var allJobs = response.Jobs.Select(x => new Jobs
+                {
+                    Id = x.Id,
+                    Name = x.Name,
+                    Image = x.Image,
+                    Description = x.Description,
+                    Location = x.Location,
+                    Salary = x.Salary,
+                    //TimeInMinutes = x.TimeInMinutes
+                });
             _searchResults = allJobs!.Where(x => x.Name.Contains(SearchTerm, StringComparison.CurrentCultureIgnoreCase)
                                             || x.Location.Contains(SearchTerm, StringComparison.CurrentCultureIgnoreCase));
             _cachedSearchResults = _searchResults;
         }
         catch (HttpRequestException ex)
         {
-            Console.WriteLine($"There was a problem loading trail data: {ex.Message}");
+            Console.WriteLine($"There was a problem loading job data: {ex.Message}");
         }
     }
 
