--- a/JobPortal/Features/ManageJobs/Shared/JobForm.razor
+++ b/JobPortal/Features/ManageJobs/Shared/JobForm.razor
@@ -54,7 +54,7 @@
     </FormSection>
 
     <FormSection Title="JobDescription"
-                 HelpText="Route instructions are a guide for the trail. This helps hikers new to the trail stay on track.">
+                 HelpText="Job Description are a guide for the job. This helps hikers new to the job stay on track.">
         @{ var i = 0; }
         @foreach (var jobDescriptions in _job.JobDescriptions)
         {
@@ -87,8 +87,50 @@
 
         <div class="row">
             <div class="col">
-                <button class="btn btn-outline-primary" type="button" @onclick="@(() => _job.JobDescriptions.Add(new JobsDto.JobDescription()))">Add Instruction</button>
+                <button class="btn btn-outline-primary" type="button" @onclick="@(() => _job.JobDescriptions.Add(new JobsDto.JobDescription()))">Add Description</button>
                 <ValidationMessage For="@(() => _job.JobDescriptions)" />
+            </div>
+        </div>
+    </FormSection>
+
+    <FormSection Title="JobRequirement"
+                 HelpText="Job Reuirement are a guide for the job. This helps hikers new to the job stay on track.">
+        @{
+            var i = 0;
+        }
+        @foreach (var jobRequirements in _job.JobRequirements)
+        {
+            i++;
+            jobRequirements.Stage = i;
+
+            <div class="row">
+                <div class="col-2">
+                    <div class="form-group">
+                        <label class="font-weight-bold text-secondary">Stage</label>
+                        <p>@jobRequirements.Stage</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="form-group">
+                        <label for="jobRequirementRequirement" class="font-weight-bold text-secondary">Requirement</label>
+                        <InputText @bind-Value="jobRequirements.Requirement" class="form-control" id="jobRequirementRequirement" />
+                        <ValidationMessage For="@(() => jobRequirements.Requirement)" />
+                    </div>
+                </div>
+                <div class="col-1 d-flex mt-3">
+                    <button @onclick="@(() => _job.JobRequirements.Remove(jobRequirements))" class="btn btn-link" type="button">
+                        <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-x-circle-fill text-danger" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM5.354 4.646a.5.5 0 1 0-.708.708L7.293 8l-2.647 2.646a.5.5 0 0 0 .708.708L8 8.707l2.646 2.647a.5.5 0 0 0 .708-.708L8.707 8l2.647-2.646a.5.5 0 0 0-.708-.708L8 7.293 5.354 4.646z" />
+                        </svg>
+                    </button>
+                </div>
+            </div>
+        }
+
+        <div class="row">
+            <div class="col">
+                <button class="btn btn-outline-primary" type="button" @onclick="@(() => _job.JobRequirements.Add(new JobsDto.JobRequirement()))">Add Requirement</button>
+                <ValidationMessage For="@(() => _job.JobRequirements)" />
             </div>
         </div>
     </FormSection>
@@ -132,7 +174,6 @@
             _job.ImageAction = ImageAction.None;
             _job.Salary = Job.Salary;
             //_job.TimeInMinutes = Job.TimeInMinutes;
-
             _job.JobDescriptions.Clear();
             _job.JobDescriptions.AddRange(Job.JobDescriptions.Select(ri => new JobsDto.JobDescription
                 {
@@ -144,9 +185,7 @@
                 {
                     Stage = ri.Stage,
                     Requirement = ri.Requirement
-                }
-
-            ));
+                }));
         }
     }
 
