--- a/JobPortal/Features/Home/JobCard.razor
+++ b/JobPortal/Features/Home/JobCard.razor
@@ -18,7 +18,7 @@
                 <i class="bi bi-coin"> </i> @Job.Salary
                </div>
             <div class="d-flex justify-content-between mb-3">
-                <button class="btn btn-primary" title="View" @onclick="@(async () => await OnSelected.InvokeAsync(Job))">
+                <button class="btn btn-primary" title="View" @onclick="@(() => NavManager.NavigateTo($"/detail/{Job.Id}"))">
                   <i class="bi bi-binoculars"></i>
                 </button>
                 <button class="btn btn-outline-secondary float-right" title="Edit" @onclick="@(() => NavManager.NavigateTo($"/edit-job/{Job.Id}"))">
