--- a/JobPortal/Features/ManageJobs/EditJob/EditJobPage.razor
+++ b/JobPortal/Features/ManageJobs/EditJob/EditJobPage.razor
@@ -56,7 +56,7 @@ else
             _job.JobDescriptions.AddRange(response.Jobs.JobDescriptions.Select(ri => new JobsDto.JobDescription
                 {
                     Stage = ri.Stage,
-                    Description = ri.Description
+                    Descriptions = ri.Descriptions
                 }));
 
             _job.JobRequirements.AddRange(response.Jobs.JobRequirements.Select(ri => new JobsDto.JobRequirement
@@ -93,7 +93,7 @@ else
 
             {
                 Stage = ri.Stage,
-                Description = ri.Description
+                Descriptions = ri.Descriptions
             }));
             _job.JobRequirements.AddRange(job.JobRequirements.Select(ri => new JobsDto.JobRequirement
 
