--- a/JobPortal/Features/ManageJobs/Shared/JobForm.razor
+++ b/JobPortal/Features/ManageJobs/Shared/JobForm.razor
@@ -70,7 +70,7 @@
                 </div>
                 <div class="col">
                     <div class="form-group">
-                        <label for="jobDescriptionDescription" class="font-weight-bold text-secondary">Description</label>
+                        <label for="jobDescriptionDescription" class="font-weight-bold text-secondary">Descriptions</label>
                         <InputText @bind-Value="jobDescriptions.Descriptions" class="form-control" id="jobDescriptionDescription" />
                         <ValidationMessage For="@(() => jobDescriptions.Descriptions)" />
                     </div>
