--- a/JobPortal/Features/Home/JobCard.razor
+++ b/JobPortal/Features/Home/JobCard.razor
@@ -14,7 +14,7 @@
                <div>
                 <span class="oi oi-map-marker"> </span> @Job.Location &nbsp;
                 <i class="bi bi-calendar"> </i> @Job.CreatedDate &nbsp;
-                <i class="bi bi-clock"> </i> @Job.CreatedTime &nbsp;
+                <i class="bi bi-clock"> </i> @Job.TimeFormatted &nbsp;
                 <i class="bi bi-coin"> </i> @Job.Salary
                </div>
             <div class="d-flex justify-content-between mb-3">
