--- a/JobPortal/Features/ManageJobs/DetailsJob/DetailsJobPage.razor
+++ b/JobPortal/Features/ManageJobs/DetailsJob/DetailsJobPage.razor
@@ -22,7 +22,7 @@ else
 
     <div class="mt-4">
         <p> <i class="bi bi-calendar"> </i> @_job.CreatedDate </p>
-        <p> <i class="bi bi-clock"> </i> @_job.CreatedTime &nbsp </p>
+        <p> <i class="bi bi-clock"> </i> @_job.TimeInMinutes &nbsp </p>
         <p><i class="bi bi-currency-dollar"> </i> @_job.Salary </p>
     </div>
     @*@if (_submitSuccessful)
@@ -37,7 +37,7 @@ else
     {
         <h3>Job Description</h3>
         <ul>
-            <li>@_job.</li>
+            <li>@_job.JobDescriptions</li>
         </ul>
     }
     {
@@ -68,10 +68,9 @@ else
             _job.Name = response.Jobs.Name;
             _job.Description = response.Jobs.Description;
             _job.Location = response.Jobs.Location;
-            //_job.CreatedDate = response.Jobs.CreatedDate;
+            _job.TimeInMinutes = response.Jobs.TimeInMinutes;
             _job.Image = response.Jobs.Image;
             _job.Salary = response.Jobs.Salary;
-            //_job.TimeInMinutes = response.Jobs.TimeInMinutes;
             _job.JobDescriptions.AddRange(response.Jobs.JobDescriptions.Select(ri => new JobsDto.JobDescription
                 {
                     Stage = ri.Stage,
