--- a/JobPortal/Features/Home/HomePage.razor
+++ b/JobPortal/Features/Home/HomePage.razor
@@ -54,7 +54,7 @@ else
                     Description = x.Description,
                     Location = x.Location,
                     Salary = x.Salary,
-                    //TimeInMinutes = x.TimeInMinutes
+                    TimeInMinutes = x.TimeInMinutes
                 });
         }
         catch (HttpRequestException ex)
