--- a/JobPortal/Features/Home/JobCard.razor
+++ b/JobPortal/Features/Home/JobCard.razor
@@ -3,7 +3,6 @@
 <div class="parent_card">
     <div class="card shadow" style="">
         <div class=" card-left bule-bg">
-            @*<img src="@Job.Image" class="card_img_left" /> alt="@Job.Name"*@
              <img src="@(!string.IsNullOrWhiteSpace(Job.Image) ? $"images/{Job.Image}" : "https://via.placeholder.com/286x190.jpg?text=No+Image+For+Job")" class="card_img_left">
         </div>
             <div class="card_center">
@@ -15,8 +14,9 @@
                 <span class="oi oi-map-marker"> </span> @Job.Location &nbsp;
                 <i class="bi bi-calendar"> </i> @Job.CreatedDate &nbsp;
                 <i class="bi bi-clock"> </i> @Job.TimeFormatted &nbsp;
-                <i class="bi bi-coin"> </i> @Job.Salary
-               </div>
+                <i class="bi bi-currency-bitcoin"> </i> @Job.Salary
+            </div>
+                @* <i class="bi bi-coin"> </i> *@                             
             <div class="d-flex justify-content-between mb-3">
                 <button class="btn btn-primary" title="View" @onclick="@(() => NavManager.NavigateTo($"/detail/{Job.Id}"))">
                   <i class="bi bi-binoculars"></i>
