--- a/JobPortal/Features/Home/SearchPage.razor
+++ b/JobPortal/Features/Home/SearchPage.razor
@@ -35,6 +35,7 @@ else
 @code {
     private IEnumerable<Jobs>? _searchResults;
     private IEnumerable<Jobs> _cachedSearchResults = Array.Empty<Jobs>();
+    private Jobs? _selectedJobs;
 
     [Parameter] public string SearchTerm { get; set; } = default!;
     [Parameter] public int? MaxSalary { get; set; }
@@ -53,7 +54,7 @@ else
                     Description = x.Description,
                     Location = x.Location,
                     Salary = x.Salary,
-                    //TimeInMinutes = x.TimeInMinutes
+                    TimeInMinutes = x.TimeInMinutes
                 });
             _searchResults = allJobs!.Where(x => x.Name.Contains(SearchTerm, StringComparison.CurrentCultureIgnoreCase)
                                             || x.Location.Contains(SearchTerm, StringComparison.CurrentCultureIgnoreCase));
@@ -77,11 +78,6 @@ else
         }
     }
 
-    private void HandleJobSelected(Jobs job)
-    {
-        string url = "";
-        url = "/detail/" + job.Id.ToString();
-        NavManager.NavigateTo(url);
-
-    }
+    private void HandleJobSelected(Jobs jobs)
+        => _selectedJobs = jobs;
 }
