--- a/JobPortal/Features/ManageJobs/EditJob/EditJobPage.razor
+++ b/JobPortal/Features/ManageJobs/EditJob/EditJobPage.razor
@@ -52,17 +52,15 @@ else
             _job.Location = response.Jobs.Location;
             _job.Image = response.Jobs.Image;
             _job.Salary = response.Jobs.Salary;
-            //_job.TimeInMinutes = response.Jobs.TimeInMinutes;
+            _job.TimeInMinutes = response.Jobs.TimeInMinutes;
             _job.JobDescriptions.AddRange(response.Jobs.JobDescriptions.Select(ri => new JobsDto.JobDescription
                 {
-                    Id = ri.Id,
                     Stage = ri.Stage,
-                    Descriptions = ri.Descriptions
+                    Description = ri.Description
                 }));
 
             _job.JobRequirements.AddRange(response.Jobs.JobRequirements.Select(ri => new JobsDto.JobRequirement
                 {
-                    Id = ri.Id,
                     Stage = ri.Stage,
                     Requirement = ri.Requirement
                 }));
@@ -89,13 +87,12 @@ else
             _job.Description = job.Description;
             _job.Location = job.Location;
             _job.Salary = job.Salary;
-            //_job.TimeInMinutes = job.TimeInMinutes;
+            _job.TimeInMinutes = job.TimeInMinutes;
             _job.JobDescriptions.Clear();
             _job.JobDescriptions.AddRange(job.JobDescriptions.Select(ri => new JobsDto.JobDescription
-
             {
                 Stage = ri.Stage,
-                Descriptions = ri.Descriptions
+                Description = ri.Description
             }));
             _job.JobRequirements.AddRange(job.JobRequirements.Select(ri => new JobsDto.JobRequirement
 
