--- a/JobPortal/Features/Home/SearchPage.razor
+++ b/JobPortal/Features/Home/SearchPage.razor
@@ -50,6 +50,11 @@ else
                 {
                     Id = x.Id,
                     Name = x.Name,
+                    EmployerName = x.EmployerName,
+                    PLanguage = x.PLanguage,
+                    FrameworkName = x.FrameworkName,
+                    JobType = x.JobType,
+                    Opento = x.Opento,
                     Image = x.Image,
                     Description = x.Description,
                     Location = x.Location,
