--- a/JobPortal/Features/Layout/MainLayout.razor
+++ b/JobPortal/Features/Layout/MainLayout.razor
@@ -1,9 +1,12 @@
 ﻿@inherits LayoutComponentBase
 
-<Header />
-
+<div class="page">
+    <div class="sidebar">
+    <Header />
+    </div>
 <main class="container mb-5">
 
 @Body
 
 </main>
+</div>
