--- a/JobPortal/_Imports.razor
+++ b/JobPortal/_Imports.razor
@@ -10,4 +10,5 @@
 @using JobPortal.Features.Home
 @using JobPortal.Features.Layout
 @using Blazored.FluentValidation
-@using MediatR;
+@using MediatR
+@using MudBlazor
