--- a/JobPortal/Features/Layout/Header.razor
+++ b/JobPortal/Features/Layout/Header.razor
@@ -1,9 +1,39 @@
-﻿<nav class="navbar mb-5 shadow">
-
-    <a class="navbar-brand" href="/">
-
-        <img src="/images/navbar.jpg">
-
-    </a>
-
+﻿<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <a class="navbar-brand" href ="/">
+         <div class="logo">Nxgen's</div>
+        </a>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class=" nav justify-content-end">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="/">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/add-job">Add Job</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Dropdown
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="#">Action</a></li>
+                        <li><a class="dropdown-item" href="#">Another action</a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    </ul>
+                </li>
+            </ul>
+           </div>
+            <form class="d-flex">
+                <div class="justify-content-end">
+                    <div class="d-grid gap-2 d-md-block">
+                        <button class="btn btn-primary" type="button">Sign in</button>
+                        <button class="btn btn-primary" type="button">Log in</button>
+                    </div>
+                </div>
+            </form>        
+        </div>
 </nav>
