[Employer Job page]

--- a/JobPortal/Features/Layout/MainLayout.razor
+++ b/JobPortal/Features/Layout/MainLayout.razor
@@ -3,6 +3,9 @@
 <div class="page">
     <div class="sidebar">
     <Header />
+        <MudThemeProvider />
+        <MudDialogProvider />
+        <MudSnackbarProvider />
     </div>
 <main class="container mb-5">
 
