--- a/JobPortal/_Imports.razor
+++ b/JobPortal/_Imports.razor
@@ -12,4 +12,4 @@
 @using Blazored.FluentValidation
 @using MediatR
 @using MudBlazor
-@using JobPortal.Shared.Features.MangeEmployer;
+@using JobPortal.Shared.Features.ManageEmployer;
