--- a/JobPortal/Features/ManageEmployer/EmployerPage.razor
+++ b/JobPortal/Features/ManageEmployer/EmployerPage.razor
@@ -1,39 +1,45 @@
 ﻿@page "/employer"
 @inject IMediator Mediator
+@using JobPortal.Shared.Features.ManageEmployer;
 
-@if (_isLoading)
+@if ( _employer == null)
 {
-    <p>Loading Profile.....</p>
+    <p><em>Loading Profile...</em></p>
 }
 else
 {
-    <h3 class="mt-5 mb-4">@_employer.EmployerName ;</h3>
-}
-
-@code {
-    private bool _isLoading;
-    private EmployerDto _employer = new EmployerDto();
-
-    [Parameter] public int EmployerId { get; set; }
-
-    protected override async Task OnInitializedAsync()
+    @foreach(var Employer in _employer)
     {
-        _isLoading = true;
+        <h3 class="mt-5 mb-4">@Employer.EmployerName</h3>
+        <h4 class="mt-5 mb-4">@Employer.EmployerEmail</h4>
+        <h4 class="mt-5 mb-4">@Employer.EmployerPhone</h4>
 
-        var response = await Mediator.Send(new GetEmployerRequest(EmployerId));
-
-        if (response.Employers is not null)
-        {
-            _employer.Id = EmployerId;
-            _employer.EmployerName = response.Employers.EmployerName;
-            _employer.EmployerEmail = response.Employers.EmployerEmail;
-            _employer.EmployerPhone = response.Employers.EmployerPhone;
-            _employer.Location = response.Employers.Location;
-            _employer.Description = response.Employers.Description;
-            _employer.Image = response.Employers.Image;
-
-        }
-        _isLoading = false;
     }
 }
 
+@code {
+    private IEnumerable<Employers>? _employer;
+
+    protected override async Task OnInitializedAsync()
+    {
+        try
+        {
+            var response = await Mediator.Send(new GetEmployerRequest());
+            _employer = response.Employers.Select(x => new Employers
+            {
+                Id = x.Id,
+                EmployerName = x.EmployerName,
+                EmployerEmail = x.EmployerEmail,
+                EmployerPhone = x.EmployerPhone,
+                Location = x.Location,
+                Description = x.Description,
+                Image = x.Image
+            });
+        
+        }
+        catch (HttpRequestException ex)
+        {
+            Console.WriteLine($"There was a problem loading job data: {ex.Message}");
+        }
+    }
+}
