--- a/JobPortal/Features/Home/JobCard.razor
+++ b/JobPortal/Features/Home/JobCard.razor
@@ -13,7 +13,7 @@
                <div>
                 <span class="oi oi-map-marker"> </span> @Job.Location &nbsp;
                 <i class="bi bi-calendar"> </i> @Job.CreatedDate &nbsp;
-                <i class="bi bi-clock"> </i> @Job.TimeFormatted &nbsp;
+                @*<i class="bi bi-clock"> </i> @Job.Released &nbsp;*@
                 <i class="bi bi-currency-bitcoin"> </i> @Job.Salary
             </div>
                 @* <i class="bi bi-coin"> </i> *@                             
@@ -21,9 +21,18 @@
                 <button class="btn btn-primary" title="View" @onclick="@(() => NavManager.NavigateTo($"/detail/{Job.Id}"))">
                   <i class="bi bi-binoculars"></i>
                 </button>
-                <button class="btn btn-outline-secondary float-right" title="Edit" @onclick="@(() => NavManager.NavigateTo($"/edit-job/{Job.Id}"))">
-                    <i class="bi bi-pencil"></i>
-                </button>
+
+                <AuthorizeView>
+
+                    @if (Job.Owner.Equals(context.User.Identity?.Name, StringComparison.OrdinalIgnoreCase) || context.User.IsInRole("Administrator"))
+                    {
+                        <button class="btn btn-outline-secondary float-right" title="Edit" @onclick="@(() => NavManager.NavigateTo($"/edit-job/{Job.Id}"))">
+                            <i class="bi bi-pencil"></i>
+                        </button>
+                    }
+
+                </AuthorizeView>
+
             </div>
         </div>
     </div>
