--- a/JobPortal/Features/Layout/Header.razor
+++ b/JobPortal/Features/Layout/Header.razor
@@ -1,4 +1,6 @@
-﻿<nav class="navbar navbar-expand-lg navbar-light bg-light">
+﻿@using JobPortal.Features.Auth
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -14,9 +16,12 @@
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="/employer">Employer</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/add-job">Add Job</a>
-                </li>
+                <AuthorizeView>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/add-job">Add Job</a>
+                    </li>
+                </AuthorizeView>
+                
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         Dropdown
@@ -33,8 +38,7 @@
             <form class="d-flex">
                 <div class="justify-content-end">
                     <div class="d-grid gap-2 d-md-block">
-                        <button class="btn btn-primary" type="button">Sign in</button>
-                        <button class="btn btn-primary" type="button">Log in</button>
+                        <button class="btn btn-primary" type="button"><LoginStatus /></button>
                     </div>
                 </div>
             </form>        
