--- a/JobPortal/Features/ManageJobs/EditJob/DetailsJobPage.razor
+++ b/JobPortal/Features/ManageJobs/EditJob/DetailsJobPage.razor
@@ -15,7 +15,7 @@ else
 
     <div class="mt-4">
         <p> <i class="bi bi-calendar"> </i> @_job.CreatedDate </p>
-        <p> <i class="bi bi-clock"> </i> @_job.TimeInMinutes &nbsp </p>
+        @*<p> <i class="bi bi-clock"> </i> @_job.Released &nbsp </p>*@
         <p><i class="bi bi-currency-dollar"> </i> @_job.Salary </p>
     </div>
 
@@ -69,7 +69,6 @@ else
             _job.Location = response.Jobs.Location;
             _job.Image = response.Jobs.Image;
             _job.Salary = response.Jobs.Salary;
-            _job.TimeInMinutes = response.Jobs.TimeInMinutes;
             _job.CreatedDate = response.Jobs.CreatedDate;
             _job.JobDescriptions.AddRange(response.Jobs.JobDescriptions.Select(ri => new JobsDto.JobDescription
                 {
