--- a/JobPortal/Features/ManageJobs/EditJob/EditJobPage.razor
+++ b/JobPortal/Features/ManageJobs/EditJob/EditJobPage.razor
@@ -1,5 +1,6 @@
 ﻿@page "/edit-job/{JobsId:int}"
 @inject IMediator Mediator
+@attribute [Authorize]
 
 <PageTitle>Edit Job - JobPortal</PageTitle>
 
@@ -50,7 +51,7 @@ else
             _job.Location = response.Jobs.Location;
             _job.Image = response.Jobs.Image;
             _job.Salary = response.Jobs.Salary;
-            _job.TimeInMinutes = response.Jobs.TimeInMinutes;
+            //_job.Released = response.Jobs.Released;
             _job.CreatedDate = response.Jobs.CreatedDate;
             _job.JobDescriptions.AddRange(response.Jobs.JobDescriptions.Select(ri => new JobsDto.JobDescription
                 {
@@ -91,7 +92,7 @@ else
             _job.Description = job.Description;
             _job.Location = job.Location;
             _job.Salary = job.Salary;
-            _job.TimeInMinutes = job.TimeInMinutes;
+            //_job.Released = job.Released;
             _job.CreatedDate = job.CreatedDate;
             _job.JobDescriptions.Clear();
             _job.JobDescriptions.AddRange(job.JobDescriptions.Select(ri => new JobsDto.JobDescription
