--- a/JobPortal/_Imports.razor
+++ b/JobPortal/_Imports.razor
@@ -13,3 +13,6 @@
 @using MediatR
 @using MudBlazor
 @using JobPortal.Shared.Features.ManageEmployer;
+@using Microsoft.AspNetCore.Authorization
+@using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.AspNetCore.Components.WebAssembly.Authentication
